# mo-editor

./: .buildinfo  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_source.html  Application_8hpp.html  Application_8hpp.js  Application_8hpp__dep__incl.map  Application_8hpp__dep__incl.md5  Application_8hpp__incl.map  Application_8hpp__incl.md5  Application_8hpp_source.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  CodeEditor_8cpp.html  CodeEditor_8cpp.js  CodeEditor_8cpp__incl.map  CodeEditor_8cpp__incl.md5  CodeEditor_8cpp_source.html  CodeEditor_8hpp.html  CodeEditor_8hpp.js  CodeEditor_8hpp__dep__incl.map  CodeEditor_8hpp__dep__incl.md5  CodeEditor_8hpp__incl.map  CodeEditor_8hpp__incl.md5  CodeEditor_8hpp_source.html  Constants_8hpp.html  Constants_8hpp.js  Constants_8hpp__dep__incl.map  Constants_8hpp__dep__incl.md5  Constants_8hpp_source.html  Document_8cpp.html  (+377 more)
.doctrees/: architecture.doctree  environment.pickle  index.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docs.yml  release.yml  sanitizers.yml
LICENSES/: GPL-3.0-or-later.txt
_sources/: architecture.rst.txt  index.rst.txt
cmake/: CompilerWarnings.cmake  Coverage.cmake  Hardening.cmake  HelloConfig.cmake.in  MoConfig.cmake.in  Packaging.cmake  ReproducibleBuilds.cmake  Sanitizers.cmake  Sbom.cmake  StaticAnalyzers.cmake
data/: io.github.liudng.hello.desktop.in  io.github.liudng.hello.metainfo.xml  io.github.liudng.hello.service.in  io.github.liudng.mo.desktop.in  io.github.liudng.mo.metainfo.xml  io.github.liudng.mo.service.in
data/mime/: io.github.liudng.hello.xml  io.github.liudng.mo.xml
docs/: Doxyfile.in  architecture.md
docs/man/: hello.1  mo.1
docs/sphinx/: conf.py  index.rst
i18n/: CMakeLists.txt  hello_zh_CN.ts  mo_zh_CN.ts
packaging/debian/: changelog  control  copyright  postinst  prerm  rules
packaging/flatpak/: io.github.liudng.hello.yaml  io.github.liudng.mo.yaml
packaging/install/: CMakeLists.txt
packaging/rpm/: hello.spec  mo.spec
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_7.js  functions_0.js  functions_1.js  (+62 more)
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  SingleInstance.cpp  SingleInstance.hpp
src/core/: CMakeLists.txt
src/core/include/hello/core/: Constants.hpp  Logger.hpp  Settings.hpp
src/core/include/mo/core/: Constants.hpp  Logger.hpp  Settings.hpp
src/core/src/: Logger.cpp  Settings.cpp
src/models/: CMakeLists.txt
src/models/include/hello/models/: Document.hpp
src/models/include/mo/models/: Document.hpp
src/models/src/: Document.cpp
src/resources/: CMakeLists.txt  resources.qrc
src/services/: CMakeLists.txt
src/services/include/hello/services/: EncodingDetector.hpp  FileService.hpp  SessionManager.hpp
src/services/include/mo/services/: EncodingDetector.hpp  FileService.hpp  SessionManager.hpp
src/services/src/: EncodingDetector.cpp  FileService.cpp  SessionManager.cpp
src/ui/: CMakeLists.txt
src/ui/dialogs/: FindReplaceDialog.cpp  FindReplaceDialog.hpp  FindReplaceDock.cpp  FindReplaceDock.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/ui/editor/: CodeEditor.cpp  CodeEditor.hpp
src/ui/mainwindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/ui/styles/: dark.qss  light.qss
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  fuzz_settings.cpp
tests/integration/: CMakeLists.txt  test_mainwindow.cpp
tests/unit/: CMakeLists.txt  test_document.cpp  test_encoding_detector.cpp  test_settings.cpp
tools/: run_clang_tidy.sh  setup_dev_env.sh
tools/hooks/: pre-commit
